@@ -1294,7 +1294,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
              "TWO-ARG-/" "TWO-ARG-/=" "TWO-ARG-<"
              "TWO-ARG-<=" "TWO-ARG-="
              "TWO-ARG->" "TWO-ARG->=" "TWO-ARG-AND"
-             "TWO-ARG-GCD" "TWO-ARG-IOR"
+             "TWO-ARG-EQV" "TWO-ARG-GCD" "TWO-ARG-IOR"
              "TWO-ARG-LCM" "TWO-ARG-XOR"
              "TYPE-DIFFERENCE" "TYPE-EXPAND"
              "TYPE-INTERSECTION" "TYPE-INTERSECTION2"
