@@ -2029,6 +2029,9 @@ changes in sbcl-0.8.4 relative to sbcl-0.8.3:
     performance of the compiler by about 20%.
   * optimization: performance of FILL (and :INITIAL-ELEMENT) on
     simple-base-strings and simple-bit-vectors is improved.
+  * optimization: the optimization of 32-bit logical and arithmetic
+    functions introduced in version 0.8.3 on the x86 has been
+    implemented on the ppc.
   * microoptimization: the compiler is better able to make use of the
     x86 LEA instruction for multiplication by constants.
   * bug fix: in some situations compiler did not report usage of
